sfdx-source/isvte_falcon/main/default/objects/DW_Account__c/DW_Account__c.object-meta.xml
<CustomObject>
    <description>Object to store information about DriveWealth Accounts</description>
    <label>DW Account</label>
    <nameField>
        <label>DW Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DW Accounts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>