sfdx-source/isvte_falcon/main/default/objects/DW_Account__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Salesforce Account this DriveWealth account belongs to</description>
    <inlineHelpText>Salesforce Account this DriveWealth account belongs to</inlineHelpText>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DW Accounts</relationshipLabel>
    <relationshipName>DW_Accounts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>