sfdx-source/isvte_falcon/main/default/objects/DW_Account__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <description>DriveWealth Account ID</description>
    <externalId>true</externalId>
    <inlineHelpText>DriveWealth Account ID</inlineHelpText>
    <label>Account ID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>