sfdx-source/isvte_falcon/main/default/objects/DW_Account__c/fields/Account_No__c.field-meta.xml
<CustomField>
    <fullName>Account_No__c</fullName>
    <label>Account No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>