sfdx-source/isvte_falcon/main/default/objects/DW_Account__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>DriveWealth accountType; 1 - Practice or 2 - Live.</description>
    <inlineHelpText>DriveWealth accountType; 1 - Practice or 2 - Live.</inlineHelpText>
    <label>Account Type</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>