sfdx-source/isvte_falcon/main/default/objects/DW_Account__c/fields/Created_When__c.field-meta.xml
<CustomField>
    <fullName>Created_When__c</fullName>
    <label>Created When</label>
    <length>30</length>
    <type>Text</type>
</CustomField>