sfdx-source/isvte_falcon/main/default/objects/DW_Account__c/fields/Opened_When__c.field-meta.xml
<CustomField>
    <fullName>Opened_When__c</fullName>
    <label>Opened When</label>
    <length>30</length>
    <type>Text</type>
</CustomField>